--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".CameraView.CameraFragment">
 
     <androidx.camera.view.PreviewView
@@ -11,12 +12,14 @@
         android:layout_height="match_parent"
         />
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/captureImage"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="Capture Image"
-        android:layout_gravity="bottom"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="end|center"
+        android:backgroundTint="@color/white"
+        app:borderWidth="0dp"
+        android:layout_marginEnd="15dp"
         />
 
 
