--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -16,10 +16,12 @@
         android:id="@+id/captureImage"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        app:fabCustomSize="60dp"
         android:layout_gravity="end|center"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/black"
         app:borderWidth="0dp"
         android:layout_marginEnd="15dp"
+        android:src="@android:drawable/ic_menu_camera"
         />
 
 
