--- a/app/src/main/res/layout/fragment_edit_placement.xml
+++ b/app/src/main/res/layout/fragment_edit_placement.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".CameraView.EditPlacementFragment">
 
@@ -48,13 +49,13 @@
             android:padding="15dp"
             >
 
-            <Button
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/kort"
-                android:textAllCaps="false"
-                android:id="@+id/wasteCard"
+                android:hint="@string/kort"
                 android:layout_gravity="center_vertical"
+                android:textSize="12sp"
+                android:id="@+id/wasteCard"
                 />
 
         </LinearLayout>
@@ -64,6 +65,15 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/intro_edit"
+                android:textSize="12sp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                />
+
         </LinearLayout>
 
         <LinearLayout
@@ -72,13 +82,13 @@
             android:layout_weight="1"
             android:padding="15dp">
 
-            <Button
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/kort"
-                android:textAllCaps="false"
+                android:hint="@string/kort"
+                android:layout_gravity="center_vertical"
+                android:textSize="12sp"
                 android:id="@+id/foundation1"
-                android:layout_gravity="center_vertical"
                 />
 
 
@@ -91,13 +101,13 @@
             android:padding="15dp"
             >
 
-            <Button
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/kort"
+                android:hint="@string/kort"
+                android:layout_gravity="center_vertical"
+                android:textSize="12sp"
                 android:id="@+id/foundation2"
-                android:textAllCaps="false"
-                android:layout_gravity="center_vertical"
                 />
 
         </LinearLayout>
@@ -109,13 +119,13 @@
             android:padding="15dp"
             >
 
-            <Button
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/kort"
-                android:textAllCaps="false"
+                android:hint="@string/kort"
+                android:layout_gravity="center_vertical"
+                android:textSize="12sp"
                 android:id="@+id/foundation3"
-                android:layout_gravity="center_vertical"
                 />
 
         </LinearLayout>
@@ -127,13 +137,13 @@
             android:padding="15dp"
             >
 
-            <Button
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/kort"
-                android:textAllCaps="false"
-                android:id="@+id/foundation4"
+                android:hint="@string/kort"
                 android:layout_gravity="center_vertical"
+                android:textSize="12sp"
+                android:id="@+id/foundation4"
                 />
 
         </LinearLayout>
@@ -167,24 +177,24 @@
                 />
 
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/bagerste_kort"
+                android:hint="@string/bagerste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab1B"
-                android:textAllCaps="false"
                 />
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/forreste_kort"
-                android:id="@+id/tab1F"
+                android:hint="@string/forreste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
-                android:textAllCaps="false"
+                android:id="@+id/tab1F"
                 />
 
         </LinearLayout>
@@ -204,25 +214,25 @@
                 android:id="@+id/hiddencardsTab2"
                 />
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/bagerste_kort"
+                android:hint="@string/bagerste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab2B"
-                android:textAllCaps="false"
                 />
 
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/forreste_kort"
+                android:hint="@string/forreste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab2F"
-                android:textAllCaps="false"
                 />
 
         </LinearLayout>
@@ -244,24 +254,24 @@
                 />
 
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/bagerste_kort"
+                android:hint="@string/bagerste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab3B"
-                android:textAllCaps="false"
                 />
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/forreste_kort"
+                android:hint="@string/forreste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab3F"
-                android:textAllCaps="false"
                 />
 
         </LinearLayout>
@@ -283,33 +293,35 @@
                 />
 
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/bagerste_kort"
+                android:hint="@string/bagerste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab4B"
-                android:textAllCaps="false"
                 />
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/forreste_kort"
+                android:hint="@string/forreste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab4F"
-                android:textAllCaps="false"
                 />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:fabCustomSize="50dp"
                 android:id="@+id/done"
                 android:layout_gravity="center"
-
+                android:src="@drawable/ic_icon_awesome_check"
+                android:backgroundTint="@color/grey"
                 />
 
 
@@ -332,24 +344,24 @@
                 />
 
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/bagerste_kort"
+                android:hint="@string/bagerste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab5B"
-                android:textAllCaps="false"
                 />
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/forreste_kort"
+                android:hint="@string/forreste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab5F"
-                android:textAllCaps="false"
                 />
 
         </LinearLayout>
@@ -370,24 +382,24 @@
                 android:id="@+id/hiddencardsTab6"
                 />
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/bagerste_kort"
+                android:hint="@string/bagerste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab6B"
-                android:textAllCaps="false"
                 />
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/forreste_kort"
+                android:hint="@string/forreste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab6F"
-                android:textAllCaps="false"
                 />
 
         </LinearLayout>
@@ -408,24 +420,24 @@
                 android:id="@+id/hiddencardsTab7"
                 />
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/bagerste_kort"
+                android:hint="@string/bagerste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab7B"
-                android:textAllCaps="false"
                 />
 
-            <Button
+            <EditText
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/forreste_kort"
+                android:hint="@string/forreste_kort"
+                android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:id="@+id/tab7F"
-                android:textAllCaps="false"
                 />
 
 
