"Ja/Nej" text for togglebutton

--- a/app/src/main/res/layout/fragment_edit_placement.xml
+++ b/app/src/main/res/layout/fragment_edit_placement.xml
@@ -37,7 +37,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:id="@+id/toggleWaste"
-                android:checked="true"/>
+                android:checked="true"
+                android:textOn="Ja"
+                android:textOff="Nej"
+                />
 
 
         </LinearLayout>
