--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -15,17 +15,16 @@
 
     <Button
         android:id="@+id/continueToMove"
+        style="@style/textButtonStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/scontinue"
-        android:foreground="?attr/selectableItemBackground"
-        style="@style/textButtonStart"
-        android:background="@drawable/round_button"
-        android:layout_marginBottom="20dp"
+        android:layout_gravity="bottom"
         android:layout_marginStart="320dp"
         android:layout_marginEnd="320dp"
-        android:layout_gravity="bottom"
-        />
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/round_button"
+        android:foreground="?attr/selectableItemBackground"
+        android:text="@string/scontinue" />
 
     <ImageButton
         android:id="@+id/back_button"
